2006-08-11  Roland Clobus <rclobus@bigfoot.com>
	* client/common/client.c: Marked a string for translation.
	* client/gtk/interface.c: More robust gui_state changes.
	
2006-08-10  Roland Clobus <rclobus@bigfoot.com>
	* client/common/client.c: Don't say 'A is now A' in the client.
	* server/serer.c: Fix for a scope bug made 2006-08-05.
	* server/player.c, client/common/client.c: i18n for NOTE messages,
	close connection when a bad version is encountered, clearer message
	when entering a tournament game.
	* configure.ac: Protocol is now 0.10
	* common/game.c, common/game.h: Don't broadcast tournament-time.
	* docs/README.game: Information about *.game files
	* editor/gtk/editor.c, common/game.c, common/map.c, common/game.h,
	common/map.h, server/x.game, server/star.game, server/canyon.game,
	server/pond.game, server/seafarers.game, server/lorindol.game,
	server/seafarers-gold.game: Deserts need chit sequence numbers, chit
	length must be correct.
	* server/gtk/main.c, server/server.c, server/server.h: Replace global
	'random_order'.
	
2006-08-05  Roland Clobus <rclobus@bigfoot.com>
	* server/gtk/main.c, server/meta.c, server/server.c, server/server.h,
	server/main.c, server/admin.c: Replaced a variable of global scope
	with a variable of file scope to make -r implied when -m is specified.
	* common/gtk/guimap.c: Use gmap->area when it exists.
	* editor/gtk/editor.c, client/ai/lobbybot.c: Added translator comments.

2006-08-05  Bas Wijnen <shevek@fmf.nl>
	* client/gtk/connect.c: Avoid use of comma-operator.
	* client/ai/greedy.c: Fix possible infinite loop after playing
	monopoly card.
	* docs/README.states, docs/client_states.fig: Updated to new
	situation (the changes below, and changes which had been made before).
	* common/state.c, common/state.h, client/common/client.c,
	client/common/callback.c: Improved state handling.

2006-08-04  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/interface.c: Enable roll dice for the second game of the